# pkg/server/services/homepage/type.go
@@ -13,3 +13,15 @@ type Blog struct {
 	ReadTime         int32     `json:"read_time"`
 	AuthorProfileUrl string    `json:"author_profile_url"`
 }
+
+type Press struct {
+	PressID                 int32     `json:"press_id"`
+	PublisherName           string    `json:"publisher_name"`
+	PublisherProfileImgLink string    `json:"publisher_profile_img_link"`
+	PressThumbnailUrl       string    `json:"press_thumbnail_url"`
+	Description             string    `json:"description"`
+	Title                   string    `json:"title"`
+	ExternalUrl             string    `json:"external_url"`
+	Category                []string  `json:"category"`
+	PressPublishedAt        time.Time `json:"press_published_at"`
+}
